# wardrobe-twin-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/advisors/: llm_advisor.py
backend/api/: server.py
backend/core/: mix_match_engine.py  models.py  preprocessing.py  style_learning.py  wardrobe_catalog.py
backend/crawlers/: knowledge_crawler.py
backend/db/: database.py
backend/ml/body_scan/: densepose_pipeline.py
backend/ml/garment_understanding/: blip2_extractor.py  fashionclip_pipeline.py  garment_segmenter.py
backend/ml/sizing/: donut_ocr_pipeline.py  size_matcher.py
backend/ml/tryon/: ootdiffusion_pipeline.py
config/: __init__.py  settings.py
extension/: manifest.json  popup.html
extension/src/: background.js  content.js  popup.js
scripts/: setup.bat  setup.sh
ui/: index.html  package.json  tailwind.config.js
ui/electron/: main.js
ui/src/: App.tsx  api.ts  index.css
ui/src/pages/: AdvisorPage.tsx  BodyScanPage.tsx  SettingsPage.tsx  TryOnPage.tsx  WardrobePage.tsx
ui/src/stores/: appStore.ts
